Spelling fixes for all

--- a/localisation/KR_April_l_english.yml
+++ b/localisation/KR_April_l_english.yml
@@ -12,12 +12,12 @@ no_april:0 "The Modders won't come in your timeline again."
 april.1.e:0 "Oh no!"
 
 april.2.t:0 "A New Threat"
-april.2.d:0 "Following the establishment of the Great Old Modders a new, similar, phenomenon happened in Korea. This second landing unleashed new 'Modders' and various new species previously unknown to us. They claim to be from the same universe as this ‘empire’ and that their mission is to bring it down for the good of humanity.\nThey soon also occupied the neighbouring provinces and are now expanding in order to chase their supposed enemies. Our high command is confused over their identity, are they with us or against us?"
+april.2.d:0 "Following the establishment of the Great Old Modders a new, similar, phenomenon happened in Korea. This second landing unleashed new 'Modders' and various new species previously unknown to us. They claim to be from the same universe as this 'empire' and that their mission is to bring it down for the good of humanity.\nThey soon also occupied the neighbouring provinces and are now expanding in order to chase their supposed enemies. Our high command is confused over their identity, are they with us or against us?"
 april.2.a:0 "Damned rebels!"
 april.2.b:0 "Actually, those guys seem cooler (Play the Rebels)"
 
 april.3.t:0 "The Ever-growing Threat"
-april.3.d:0 "Everywhere we go, new enemies start to mass on our borders, they seem endless in number. Our only choice is a pre-emptive strike, they would not hesitate, so why should we?."
+april.3.d:0 "Everywhere we go, new enemies start to mass on our borders, they seem endless in number. Our only choice is a preemptive strike, they would not hesitate, so why should we?."
 april.3.a:0 "Sarmatia wills it!"
 
 april.4.t:0 "The second Finno-Korean Hyperwar!"
@@ -88,8 +88,8 @@ REB_authoritarian_democrat:0 "A New Kaiserreich"
  REB_totalist_ADJ:0 "New"
  REB_totalist_DEF:0 "A New Kaiserreich"
  
- POLITICS_SARMATIA_KRHOI_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. Long disappeared he finally returned to help the KR4 modders lead the mod to a renewed greatness. Strong of his popularity he has now assumed command of all executive power in the country, including the commandment of all our armies and navies."
- POLITICS_SARMATIA_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. He is now the hidden master of our powerful sect, noone ever sees him but everyone knows he is always lying in the shadows somewhere. It's told that only Yuriswe can get in contact with him, although with a ritual unknown to any other men."
+ POLITICS_SARMATIA_KRHOI_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own Russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. Long disappeared he finally returned to help the KR4 modders lead the mod to a renewed greatness. Strong of his popularity he has now assumed command of all executive power in the country, including the commandment of all our armies and navies."
+ POLITICS_SARMATIA_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own Russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. He is now the hidden master of our powerful sect, no one ever sees him but everyone knows he is always lying in the shadows somewhere. It's told that only Yuriswe can get in contact with him, although with a ritual unknown to any other men."
  
  # Ideas
  
@@ -101,7 +101,7 @@ REB_authoritarian_democrat:0 "A New Kaiserreich"
  eco_school_of_beep_boop:0 "School of Beep Boop"
  mhc_school_of_airhorn:0 "School of Airhorn"
  cnav_course_rough_irritating:0 "Course, Rough, Irritating"
- cair_academy_of_agressive_a_wing_attacks:0 "Academy of Agressive A-wing Attacks"
+ cair_academy_of_agressive_a_wing_attacks:0 "Academy of Aggressive A-wing Attacks"
  
  ################################################################################################################################################################################################
   ### EMP
