--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -242,7 +242,7 @@ POL_attend_internationale_desc:0 "The first step to joining the international Sy
 POL_join_france_desc:0 "If we are to survive as a Syndicalist power in the heart of Europe, it is essential that we make an alliance with the strongest Syndicalist power on the continent, the French Commune."
 POL_territorial_claims_desc:0 "With an alliance with France secured, we must lay out our claims to German territory in order to ensure it falls into our hands come a new war."
 POL_austrian_claims_desc:0 "With an alliance with France secured, we must lay out our claims to Austrian territory in order to ensure it falls into our hands come a new war."
-POL_minstry_of_public_security_desc:0 "We must establish the Ministry of Public Security to weed out insurectionist elements inside the new regime, and to expand our intelligence capabilities across the globe."
+POL_minstry_of_public_security_desc:0 "We must establish the Ministry of Public Security to weed out insurrectionist elements inside the new regime, and to expand our intelligence capabilities across the globe."
 POL_international_agents_desc:0 "If we are to perform international acts of subversion in the name of Syndicalism, we must first gather like-minded individuals in other nations. Polish citizens living abroad are the perfect candidates for recruitment."
 POL_spread_the_revolution_desc:0 "The revolution defies borders, and must be spread as far and wide as it possibly can be!"
 POL_redistribute_wealth_desc:0 "The old monarchy had cruelly seized all of the nation's wealth for itself, crushing the polish people under their gilded boot-heels. We must redistribute this wealth to the people!"
@@ -273,9 +273,9 @@ POL_a_modern_panzer_desc:0 "Steel is the future, and Panzers are the embodiment 
 POL_air_superiority_desc:0 "Our air force exists to support our soldiers on the ground, and we must improve our support tactics to reflect this priority."
 POL_close_combat_desc:0 "Biplanes are not the air force of the future. If Poland's fighters are to remain anything but target practice the nation must modernise our designs in time for the next war."
 POL_air_radios_desc:0 "By giving each pilot his own personal radio, we can allow them to communicate with each other in combat situations and greatly increase their ability to perform complex manoeuvres."
-POL_air_tactics_desc:0 "Observing international air tactics will allow us to reofrm our own airforce in their image, creating a stronger airforce for little cost to us."
+POL_air_tactics_desc:0 "Observing international air tactics will allow us to reform our own airforce in their image, creating a stronger airforce for little cost to us."
 POL_support_focus_desc:0 "By focusing our bombers on the enemy's soldiers, we can destroy their morale and hinder their ability to fight an effective campaign by raining death from above."
-POL_bomber_focus_desc:0 "By focusing our bombers on the enemy's homes, we can destroy their infrastructure and win our battles before any footsoldier can even fire his rifle."
+POL_bomber_focus_desc:0 "By focusing our bombers on the enemy's homes, we can destroy their infrastructure and win our battles before any foot soldier can even fire his rifle."
 POL_polish_king_desc:0 "With the election of Augustyn I Czartoryski, the new king must secure his position as the new monarch of a struggling nation."
 POL_reincorporate_lithuania_desc:0 "Lithuania is weak and alone, and it is only with our protection that they may become safe from the threats that surround them."
 POL_line_of_succession_desc:0 "Poland's 20 years of weakness were caused by the lack of a strong king to lead the nation. We must reform our laws of succession so that there will always be a King of Poland, and that a Regency Council will never again hold sway over the nation's future."
@@ -304,7 +304,7 @@ POL_combined_arms_desc:0 "Wars are not fought with just an army, but rather with
 POL_infantry_tactics:0 "Integrated Infantry Tactics"
 POL_infantry_tactics_desc:0 "We must focus on improving our soldiers when they are still in training, so that they are well prepared when the bullets begin flying."
 POL_tp_program:0 "The TP Program"
-POL_tp_program_desc:0 "The 'TP-Program' is a Polish initiative to repurpose old German Panzer designs to suit our own needs. We must fund this program to ensure that we have strong panzer designs to support our forces in the coming wars."
+POL_tp_program_desc:0 "The 'TP-Program' is a Polish initiative to re-purpose old German Panzer designs to suit our own needs. We must fund this program to ensure that we have strong panzer designs to support our forces in the coming wars."
 POL_expand_airbase:0 "Expand our Air Defences"
 POL_expand_airbase_desc:0 "Even if Poland cannot afford to create a strong airforce of her own, we can still afford to shoot down other nation's air forces. Improving our national anti-air defences will certainly come in handy in the event of hostilities."
 POL_brest_livotsk:0 "Return of Brest-Litovsk"
@@ -318,13 +318,13 @@ POL_russian_technology_desc:0 "With our newfound alliance with Russia, it would 
 POL_war_games:0 "Hold Joint Exercises"
 POL_war_games_desc:0 "Even with war looming on the horizon, it is important to give our troops the most experience we can give them. With our close ties to Germany, there is a possibility of holding join exercises with the German military, something that is sure to benefit our troops and commanders greatly."
 POL_rebuild_krakow:0 "Rebuilding Krakow"
-POL_rebuild_krakow_desc:0 "Now that Krakow has been returned to us, it would benefit us greatly to reincorporate the existing infrastrucutre into our own. The city has seen lackluster support under the Austrian thumb, and under our care the historic city will flourish anew."
+POL_rebuild_krakow_desc:0 "Now that Krakow has been returned to us, it would benefit us greatly to reincorporate the existing infrastructure into our own. The city has seen lacklustre support under the Austrian thumb, and under our care the historic city will flourish anew."
 POL_suffrage:0 "Decree Women's Suffrage"
 POL_suffrage_desc:0 "With the coming of a new Republic should come the rebirth of the Polish people. No motion would be more symbolic than giving all Poles, man or woman, the right to vote."
 POL_experiment_with_radar:0 "Experiment with RADAR"
 POL_experiment_with_radar_desc:0 "RADAR is a new technology in the field of warfare, and one we have no experience with. If we can harness this technology, our airforce will be more competitive in the skies."
 POL_empower_gminy:0 "Empower the Gminy"
-POL_empower_gminy_desc:0 "We must hand back the power to the people, and allow themselves to be in charge of their own defenses. We shall allow every Gminy to maintain and control their own small local militia forces, so that they may better defend their own lands and interests."
+POL_empower_gminy_desc:0 "We must hand back the power to the people, and allow themselves to be in charge of their own defences. We shall allow every Gminy to maintain and control their own small local militia forces, so that they may better defend their own lands and interests."
 POL_fourth_international:0 "Joining The Fourth International"
 POL_fourth_international_desc:0 "A powerful Syndicalist state, the Soviet Untion has denounced the ways of the French Commune and the Third Internationale. They instead have created a "Fourth International" and are calling all true Syndicalist states to join in their cause. We should take them up on their offer."
 
@@ -1162,7 +1162,7 @@ poland.200.t:0 "Poland Declares the Republic"
 poland.200.d:0 "to-do"
 poland.200.a:0 "Interesting."
 poland.200.b:0 "Long live the Republic!"
-poland.201.t:0 "The Polish Military Siezes Control"
+poland.201.t:0 "The Polish Military Seizes Control"
 poland.201.d:0 "to-do"
 poland.201.a:0 "Interesting."
 poland.201.b:0 "It is for the best."
