--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -214,7 +214,7 @@ PRF_attack_bhartiya_desc:0 "The Syndicalsts to the East have too long been a thr
 PRF_india_united:0 "India United!"
 PRF_india_united_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
 PRF_bhutan_claims:0 "Arunachal Pradesh"
-PRF_bhutan_claims_desc:0 "The mountainous frontier territory once known as Tawang is rightfully ours, and was seized by the traitorious Bhutanese during the chaos of the Weltkrieg. It is time to reassert our domain over the area, now that a true national government has been restablished."
+PRF_bhutan_claims_desc:0 "The mountainous frontier territory once known as Tawang is rightfully ours, and was seized by the traitorous Bhutanese during the chaos of the Weltkrieg. It is time to reassert our domain over the area, now that a true national government has been reestablished."
 PRF_nepal_claims:0 "Our Claims Against Nepal"
 PRF_nepal_claims_desc:0 "Nepal expanded into the Indian lowlands in the chaos following the Weltkrieg. It is time to reassert our domain over those territories."
 PRF_incorporate_madras:0 "The Deccan States"
@@ -229,7 +229,7 @@ PRF_incorporate_siam:0 "Incorporating Siam"
 PRF_incorporate_siam_desc:0 "Our nation's ambitions extend to expanding past the borders of Burma. The Siamese must become part of our Federation, whether they agree or not."
 PRF_new_plan:0 "The New India Act"
 PRF_new_plan_desc:0 "With common rule over the conquered territories established, the time has come to pass reforms to ensure all of India works together as we stride into the future."
-PRF_indian_cinema:0 "Indian Cinema: Propagana Machine?"
+PRF_indian_cinema:0 "Indian Cinema: Propaganda Machine?"
 PRF_indian_cinema_desc:0 "The vibrant Indian cinema scene has the possibility to be a powerful tool of the state, and while movies are still mainly a toy of the rich, they have wide reaching social effects."
 PRF_new_research_2:0 "The Great Leap Forward"
 PRF_new_research_2_desc:0 "With the power of the entire sub-continent united, we can gather together the finest minds of India and match the research capabilities of even the most advanced Western nations!"
@@ -266,7 +266,7 @@ prf.4.d:0 "When the British Raj fell the Bombay Presidency was dissolved and its
 prf.4.a:0 "It is done! Proclaim Maharashtra a united Federal State!"
 prf.4.b:0 "Keep the Maratha districts divided"
 prf.5.t:0 "The Fifth Andra Mahasabha"
-prf.5.d:0 "The Andra Mahasabha was a people's organisation initially founded in the early 1920's to further the use of the Telugu language over the prevalence of Urdu in Hyderabad State. However, over the course of its last four conferences, the movement moved farther to the left by developing concrete political aims at enforcing compulsory education, workers' and peasants' rights as well as a progressive democratization of the Princely Federation. Currently under the leadership of the great liberal intellectual Madapati Hanumantha Rao, the Andra Mahasabha is nonetheless sharply divided between its bourgeoisie leading cadre and the mass of leftist and Syndicalist workers and peasants that constitute its core source of support. Yet in spite of these differences, the movement has just held its fifth congress and there presented a quite radical and very anti-feudal proposal for constitutional reform. As a result there has been much upheaval within the more conservative circles of the Council of Princes with the most reactionary maharajas and zamindars demanding the banning of the movement. How should the executive react?"
+prf.5.d:0 "The Andra Mahasabha was a people's organisation initially founded in the early 1920's to further the use of the Telugu language over the prevalence of Urdu in Hyderabad State. However, over the course of its last four conferences, the movement moved farther to the left by developing concrete political aims at enforcing compulsory education, workers' and peasants' rights as well as a progressive democratisation of the Princely Federation. Currently under the leadership of the great liberal intellectual Madapati Hanumantha Rao, the Andra Mahasabha is nonetheless sharply divided between its bourgeoisie leading cadre and the mass of leftist and Syndicalist workers and peasants that constitute its core source of support. Yet in spite of these differences, the movement has just held its fifth congress and there presented a quite radical and very anti-feudal proposal for constitutional reform. As a result there has been much upheaval within the more conservative circles of the Council of Princes with the most reactionary maharajas and zamindars demanding the banning of the movement. How should the executive react?"
 prf.5.a:0 "Initiate a crackdown on these liberal demagogues!"
 prf.5.b:0 "Let these pitiful intellectuals have their petty meetings"
 prf.6.t:0 "Expanding the Temple Entry Laws"
@@ -278,7 +278,7 @@ prf.7.t:0 "The Fate of the Rump Madras State"
 prf.7.d:0 "In many ways the albatross around the neck of the gun-salute state, the mutilated remains of the Madras Presidency has never been loyal nor affectionate towards our government. Invaded at the end of the first Indian Civil War by princely troops, the Tamils were graciously granted autonomy - remaining outside of the Federation at the cost of territorial concessions. However, Dravidian radicalism has risen in force throughout the Republic and many officers within the national army daren’t leave such an openly hostile power unchecked whilst traitors and Bolsheviks remain strong in Delhi and Calcutta. Something must be done about the Tamil state!"
 prf.7.a:0 "Madras must ascend to direct princely rule. India demands it!"
 prf.7.b:0 "Demand that they install a princely government!"
-prf.7.c:0 "Let's not antagonize any more Tamils"
+prf.7.c:0 "Let's not antagonise any more Tamils"
 prf.8.t:0 "Princely India Demands Total Submission"
 prf.8.d:0 "Feeling threatened by the very existence of our far superior Tamil state, the geriatric and kleptocratic princes have demanded that we surrender our very independence! There can be only one answer to such a dastardly request!"
 prf.8.a:0 "The princely menace must be extinguished, to war!"
@@ -320,11 +320,11 @@ prf.103.a:0 "Akbar Hydari, the Sadar-i-Azam of Hyderabad, shall head the governm
 prf.103.b:0 "Krushna Chandra Gajapati shall enfore princely obedience!"
 prf.103.c:0 "I've no need for lapdogs, I shall rule alone!"
 prf.104.t:0 "Osman Ali Khan Claims the Title of Kaisar-i-Hind"
-prf.104.d:0 "To the south, the primus inter pares of Princely India, Osman Ali Khan, has proclaimed himself the true successor to the mantle of Kaisar-i-Hind, the title previously borne by the Mughal and British emperors of the sub-continent. A direct proclamation that the Hyderabadi Nizam considers our own claim to legal rulership over the previous Raj as lower than the basest fiction! This bombastic claim has caused a great deal of uproar within [Root.GetNameDef], with some even supporting the self-proclaimed emperor and claiming he will soon come to restore 'proper' Indian rule over the sub-continent."
+prf.104.d:0 "To the south, the primus inter pares of Princely India, Osman Ali Khan, has proclaimed himself the true successor to the mantle of Kaisar-i-Hind, the title previously borne by the Mughal and British emperors of the sub-continent. A direct proclamation that the Hyderabadi Nizam considers our own claim to legal control over the previous Raj as lower than the basest fiction! This bombastic claim has caused a great deal of uproar within [Root.GetNameDef], with some even supporting the self-proclaimed emperor and claiming he will soon come to restore 'proper' Indian rule over the sub-continent."
 prf.104.a:0 "The gun-salute prince's gone mad!"
 prf.104.b:0 "The Indian proletariat denounces this usurper!"
 prf.105.t:0 "The Kaisar-i-Hind"
-prf.105.d:0 "The ruling nizam of Princely India, Osman Ali Khan, today proclaimed himself the true successor to the mantle of Kaisar-i-Hind - a title previously borne only by the Mughal and British emperors of the sub-continent. The proclamation clearly indicates that the nizam considers the claims of others to Indian rule as little more than fiction, and raises the spectre of renewed war between the Indian Empire and its neighboring states."
+prf.105.d:0 "The ruling nizam of Princely India, Osman Ali Khan, today proclaimed himself the true successor to the mantle of Kaisar-i-Hind - a title previously borne only by the Mughal and British emperors of the sub-continent. The proclamation clearly indicates that the nizam considers the claims of others to Indian rule as little more than fiction, and raises the spectre of renewed war between the Indian Empire and its neighbouring states."
 prf.105.a:0 "All hail the Emperor of India!"
 prf.105.b:0 "We shall see"
 prf.106.t:0 "The Council of Princes Dissolved"
@@ -367,10 +367,10 @@ prf.140.t:0 "The Reach of Hyderabad-Deccan Railroad Strengthens"
 prf.140.d:0 "If India was the jewel in the crown of British Imperialism, then the eloquent network of the Great Indian Peninsula Railway was the jewel within it. Originally constructed in 1853, it was the model upon which the Raj built its massive infrastructure of transportation, much envied by the rest of Asia and an inspiration for noted author Jules Verne. Renamed the Hyderabad-Deccan Railroad following the British withdrawal from southern India, the first part of the new line between Bombay and Hyderabad has today been proclaimed open, dramatically strengthening communication between the princely states of central India. Our engineers and planners have already commenced work on the second part of the great system - the line connecting Mysore State with Hyderabad. Princes and commoners alike agree that this undertaking has great merit and promise!"
 prf.140.a:0 "Next stop, Mysore!"
 prf.141.t:0 "The Hyderabad-Deccan Railroad Reaches Mysore"
-prf.141.d:0 "After a lenghty construction process, the great railway of [Root.GetNameDef] has finally reached the capital of the Wadiyar Princes, Mysore. Although Krishna Raja Wadiyar IV and Osman Ali Khan have their political and religious differences, this new state-wide project has considerably strengthened communication and cooperation between the two most powerful princely states of our glorious Federation."
+prf.141.d:0 "After a lengthy construction process, the great railway of [Root.GetNameDef] has finally reached the capital of the Wadiyar Princes, Mysore. Although Krishna Raja Wadiyar IV and Osman Ali Khan have their political and religious differences, this new state-wide project has considerably strengthened communication and cooperation between the two most powerful princely states of our glorious Federation."
 prf.141.a:0 "Next stop, Cape Comorin and the Indian Ocean!"
 prf.142.t:0 "The Hyderabad-Deccan Railroad Reaches Cape Comorin"
-prf.142.d:0 "At long last the trail of the Hyderabad-Deccan Railroad snakes all the way from the Bombay metropolis to the Malabar Coast. Decisively creating great coherence and a sense of unity between the involved princely states, the succesful conclusion to this great undertaking has left critics of the government, foreign as well as domestic, speechless. Today, with modern transportation connecting the tip of the continent with its major centres of power, our nation shines as a beacon of modernity!"
+prf.142.d:0 "At long last the trail of the Hyderabad-Deccan Railroad snakes all the way from the Bombay metropolis to the Malabar Coast. Decisively creating great coherence and a sense of unity between the involved princely states, the successful conclusion to this great undertaking has left critics of the government, foreign as well as domestic, speechless. Today, with modern transportation connecting the tip of the continent with its major centres of power, our nation shines as a beacon of modernity!"
 prf.142.a:0 "How great is our glorious nation!"
 prf.145.t:0 "The National Government Speaks Softly to Northern Princes"
 prf.145.d:0 "Although Delhi is a far more centralised state than the Princely Federation, the colonial lap-dogs to the North have their own fair share of maharajas and zamindars. Most of these have rallied around the fig-leaf democratic legacy of the Raj, but some express strong conservative and anti-British views with Pratap Singh Gaekwad of Baroda State in Gujarat and Hari Singh of Jammu and Kashmir State being the two most prominent. If we could sway one or both of these princes to support our right to rule all of India, we might be able to weaken the Delhi government from within, making the advance of our troops that much swifter. Swaying both would be more difficult, but approaching either runs the risk of betraying our plan before it's time and giving Delhi the advantage."
@@ -495,7 +495,7 @@ prf.186.d:0 "Amazingly, the [From.GetAdjective] has refused our demand, saying t
 prf.186.a:0 "Then war it is!"
 prf.186.b:0 "Perhaps another time..."
 prf.187.t:0 "Dealing With Nepal"
-prf.187.d:0 "In the aftermath of the Raj's collapse, [NEP.GetNameDef] utilized the chaotic situation to seize several lowlying districts at the foothills of the Himalayas. With the Delhi government integrated into our fair state, many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Nepal into a wider customs union combined with a military treaty."
+prf.187.d:0 "In the aftermath of the Raj's collapse, [NEP.GetNameDef] utilised the chaotic situation to seize several low-lying districts at the foothills of the Himalayas. With the Delhi government integrated into our fair state, many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Nepal into a wider customs union combined with a military treaty."
 prf.187.a:0 "Demand the return of the occupied districts!"
 prf.187.b:0 "Claim the districts and press for a friendly government!"
 prf.188.t:0 "The Demands of [From.GetNameDef]"
@@ -529,7 +529,7 @@ prf.195.d:0 "The [From.GetAdjective] government has just proposed a deal that wo
 prf.195.a:0 "Hand over the isles to the Indians"
 prf.195.b:0 "No, these naval bases are vital to the Kaiserliche Marine"
 prf.196.t:0 "The Transfer of the German Colonies"
-prf.196.d:0 "We have managed to convience the Germans to return some of the colonies taken by the Reich after the Raj collapsed. This is both a great sign of Indo-German friendship, but also proof that we truly have obtained the mandate as legal successor to the British. Glory to India!"
+prf.196.d:0 "We have managed to convince the Germans to return some of the colonies taken by the Reich after the Raj collapsed. This is both a great sign of Indo-German friendship, but also proof that we truly have obtained the mandate as legal successor to the British. Glory to India!"
 prf.196.a:0 "Merge the isles into our nation!"
 prf.196.b:0 "Grant Ceylon wide internal autonomy and incorporate the atolls"
 prf.197.t:0 "[From.GetName] Has Refused"
