--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -2127,5 +2127,5 @@ rusfor.1274.d:0 "Though we have established a new Spiritual Administration of th
 rusfor.1274.a:0 "Oh well"
 
 rusfor.1275.t:0 "Pacification of Central Asia."
-rusfor.1275.d:0 "Good news from Central Asia - new Tatar and Bashkir Muslim leadership could finally reorganize the system of the local Islamic institutions and partly defeat the obscurantism of the local notable theologists and preachers. Now Orenburg Muslim Spiritual Assembly proposes a new vision of Islam for the Central Asian citizens, which means, that Cental Asia will be loyal enough to us and we will be able to pay less attention to this region of Russia."
+rusfor.1275.d:0 "Good news from Central Asia - new Tatar and Bashkir Muslim leadership could finally reorganise the system of the local Islamic institutions and partly defeat the obscurantism of the local notable theologians and preachers. Now Orenburg Muslim Spiritual Assembly proposes a new vision of Islam for the Central Asian citizens, which means, that Central Asia will be loyal enough to us and we will be able to pay less attention to this region of Russia."
 rusfor.1275.a:0 "That's great!"
