--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -1579,7 +1579,7 @@ ustates.400.t:0 "Black Monday hits America!"
 ustates.400.d:0 "Despite the political turmoil going on throughout the Country, it looked like the economy of the United States might be finally be recovering after the Wall Street Crash in 1925. However today devastating Berlin Crash has finally hit America and sent our economy into a downward spiral, yet again. Reed and Long have come out railing against the corrupt bankers who let the crash happen. Curtis and Garner have both pledged to fix the economy should the win the Election."
 ustates.400.a:0 "This is just not our Year."
 ustates.401.t:0 "The Trial of Sacco and Vanzetti"
-ustates.401.d:0 "Two immigrants from Italy, Sacco and Vanzetti, have been accused of killing a guard and paymaster of a local bank in Braintree Massachusetts, a town outside of Boston. The case has quickly became the trial of the century, for Sacco and Vanzetti are anarchists. Unsurprisingly the CSA has come out strongly in favor of the two men while the American First has come out against them. How ever the case goes it looks like it will anger plenty of people."
+ustates.401.d:0 "Two immigrants from Italy, Sacco and Vanzetti, have been accused of killing a guard and paymaster of a local bank in Braintree Massachusetts, a town outside of Boston. The case has quickly became the trial of the century, for Sacco and Vanzetti are anarchists. Unsurprisingly the CSA has come out strongly in favour of the two men while the American First has come out against them. How ever the case goes it looks like it will anger plenty of people."
 ustates.401.a:0 "Sacco and Vanzetti are innocent"
 ustates.401.b:0 "Sacco and Vanzetti are guilty"
 
@@ -1592,7 +1592,8 @@ usforeign.2.t:0 "Reviving the Monroe Doctrine"
 usforeign.2.d:0 "We should rethink Latin American policy as the most horrible conflict in North American history has just ended. Other powers installed Syndicalist and German friendly governments while we were fighting ourselves. Now it's time to go and make South America our playground again."
 usforeign.2.a:0 "Uncle Sam comes back to action!"
 usforeign.2.b:0 "Still not an option"
-#######Getting our stuff back######
+
+### Getting Our Stuff Back ###
 usforeign.3.t:0 "Canada Holds Alaska"
 usforeign.3.d:0 "The Canadians had seized Alaska during the American Civil War and were still in control of it. MacArthur had no interest in reclaiming Alaska by force but hoped that Canada would be willing to hand Alaska back."
 usforeign.3.a:0 "Request the return of Alaska"
@@ -1637,7 +1638,6 @@ usforeign.13.d:0 "The Caribbeans have refused to return the island to us."
 usforeign.13.a:0 "We'll retake it one way or another!"
 usforeign.13.b:0 "Back off..."
 
-
 usforeign.14.t:0 "Our place in the sun"
 usforeign.14.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the United States. The establishment of Canadian authority over the Panama Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
 usforeign.14.a:0 "Demand the return of the canal zone!"
@@ -1670,7 +1670,6 @@ usforeign.21.d:0 "The Cubans have refused!"
 usforeign.21.a:0 "This slight will not go unanswered"
 usforeign.21.b:0 "This hubris will be met with arms!"
 
-
 ### Intervention in Central America ###
 usforeign.211.t:0 "The Mexican Coup?"
 usforeign.211.d:0 "The Mexican government is an affront to America. They are a godless syndicalist nation and we can not tolerate such a government on our borders. However, Pablo González Garza has offered us a solution let him take over and he will make Mexico friendly to our interest and American Business. "
@@ -1680,7 +1679,7 @@ usforeign.212.d:0 "Pablo González Garza and a number of men have surrounded the
 usforeign.212.a:0 "The Coup is successful!"
 usforeign.212.b:0 "The Coup Fails!"
 usforeign.213.t:0 "The Coup is successful"
-usforeign.213.d:0 "We have received word from Garza that he is now in control of Mexico and that he will be doing all that he can to destroy syndicalism within the country. Our border with our southern neighbors shall now be better protected without godless syndicalists at our gates. "
+usforeign.213.d:0 "We have received word from Garza that he is now in control of Mexico and that he will be doing all that he can to destroy syndicalism within the country. Our border with our southern neighbours shall now be better protected without godless syndicalists at our gates. "
 usforeign.213.a:0 "Great!"
 usforeign.214.t:0 "Treaty with America?"
 usforeign.214.d:0 "Now that Garza is in control of Mexico, it would be good to sign a treaty with the American Union State giving us better relations. This would of course place Mexico in the American orbit but the gringos would want some reward for helping us get into power and would get them off our back."
@@ -1708,14 +1707,14 @@ usforeign.220.t:0 "Mexicans Refuse"
 usforeign.220.d:0 "The Mexicans have refused to sign a genius treaty. We should have expected such stupidity from the Mexicans."
 usforeign.220.a:0 "Stupid Mexicans"
 usforeign.221.t:0 "War in Central America"
-usforeign.221.d:0 "War has erupted in Central America between the godless syndicalists in centroamerica and the United Provinces of Central America. Many in our government are suggesting that we send both men and supplies to the United Provinces in order to stop the spread of syndicalism. "
+usforeign.221.d:0 "War has erupted in Central America between the godless syndicalists in Centroamérica and the United Provinces of Central America. Many in our government are suggesting that we send both men and supplies to the United Provinces in order to stop the spread of syndicalism. "
 usforeign.221.a:0 "Guns and Men to stop Syndicalism"
 usforeign.221.b:0 "They can handle things on their own"
 usforeign.222.t:0 "Aid from the Americas"
-usforeign.222.d:0 "The Americans have sent us aid and support in order to help us stop syndicalism. More over a number of American Volunteers have arrived ready to help us fight Centroamerica!"
+usforeign.222.d:0 "The Americans have sent us aid and support in order to help us stop syndicalism. More over a number of American Volunteers have arrived ready to help us fight Centroamérica!"
 usforeign.222.a:0 "Great!"
 usforeign.223.t:0 "Central American War is over"
-usforeign.223.d:0 "The Central American War is over and regardless of the outcome our men have gained experience in fighting against the godless syndicalists in Central Ameirca."
+usforeign.223.d:0 "The Central American War is over and regardless of the outcome our men have gained experience in fighting against the godless syndicalists in Central America."
 usforeign.223.a:0 "We have learned something"
 usforeign.224.t:0 "Treaty with America?"
 usforeign.224.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for United Provinces. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
@@ -1791,6 +1790,7 @@ usforeign.244.t:0 "Syndicalism in Central America"
 usforeign.244.d:0 "The United Provinces have lost and now Central America is under syndicalist control. Many in the government are advocating for a crusade against Syndicalism and stop it from spreading it further in the Americas. "
 usforeign.244.a:0 "We shall destroy Syndicalism"
 usforeign.244.b:0 "It won't spread"
+
 ### Joining Factions ###
 usforeign.298.t:0 "The US Wishes To Join the Entente"
 usforeign.298.d:0 "For the first time in history - the US supports Canada and the other nations of the Entente in their struggle to retake their homelands. Now, with the US military and economical might behind us the Syndicalist menace won't last long!"
@@ -1805,5 +1805,5 @@ usforeign.300.d:0 "For the first time in history - US supports Germany and count
 usforeign.300.a:0 "Great, now we can't lose this war"
 
 usforeign.301.t:0 "United States joins Mitteleuropa"
-usforeign.301.d:0 "Germans are happy to see us joining the common cause - destroying the evil Syndicalists. Now we are part of Mittleeuropa"
+usforeign.301.d:0 "Germans are happy to see us joining the common cause - destroying the evil Syndicalists. Now we are part of Mitteleuropa"
 usforeign.301.a:0 "A great news!"
