--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -14,7 +14,7 @@ HAW_constitutional_monarchy_desc:0 "We shall set up our monarchy to be a constit
 HAW_punana_leo:0 "Punana Leo"
 HAW_punana_leo_desc:0 "Meaning Language Nests, the Punana Leo is a school program that the monarchy has proposed to restore the usage of the native Hawai'ian Language among the people. As part of the program numerous schools would be established throughout the kingdom on all the different islands."
 HAW_hawaiian_renassiance:0 "Hawai'ian Renaissance"
-HAW_hawaiian_renassiance_desc:0 "A movement has been stiring throughout the kingdom of a second Hawai'ian Renaissance. The native culture of Hawai'i that was supressed by the Americans is now being celebrated by all Hawai'ians regardless of ethnicity. A new surge in patriotism and nationalism has been sweeping Hawaii as many start to consider themselves separate from America. "
+HAW_hawaiian_renassiance_desc:0 "A movement has been stiring throughout the kingdom of a second Hawai'ian Renaissance. The native culture of Hawai'i that was suppressed by the Americans is now being celebrated by all Hawai'ians regardless of ethnicity. A new surge in patriotism and nationalism has been sweeping Hawaii as many start to consider themselves separate from America. "
 HAW_republic:0 "Hawai'ian Republic"
 HAW_republic_desc:0 "Now that the fate is in our hand it is best to establish a republic. The age of kings is over. Moreover, while America may be in crisis now, its government form is clearly a better model then a monarchy. Here the people will have a voice.  "
 HAW_support_big_five:0 "Support the Big Five"
@@ -30,13 +30,13 @@ HAW_hawaiian_revolution_desc:0 "Kings are not needed and neither are plantation 
 HAW_direct_democracy:0 "Communes of the Islands"
 HAW_direct_democracy_desc:0 "We shall work on the principal of Direct democracy. Every Island will form its own commune. Here the decisions will be made by the people, all the people. Naturally any decision that effects the whole country must be negotiated by all the people. There will be a federal council to help handle the more nation wide policies and foreign affairs, but this shall be checked by the different islands voting on the policies. "
 HAW_pinapple_union:0 "Pineapple Unions"
-HAW_pinapple_union_desc:0 "To help modernize Hawai'i we will need to strengthen the unions. From the Sugarcane to the Pineapple unions and more all shall be given power to help keep the Hawai'ian workers productive, safe, and happy."
+HAW_pinapple_union_desc:0 "To help modernise Hawai'i we will need to strengthen the unions. From the Sugarcane to the Pineapple unions and more all shall be given power to help keep the Hawai'ian workers productive, safe, and happy."
 HAW_socialist_education:0 "Socialist Education"
-HAW_socialist_education_desc:0 "As we take over and bring true democracy to the people, we need to modernize the education system. It was designed to help the rich before but now that the people are in charge everyone will be able to get the best education possible. This will help make sure that research progresses with the revolution. "
+HAW_socialist_education_desc:0 "As we take over and bring true democracy to the people, we need to modernise the education system. It was designed to help the rich before but now that the people are in charge everyone will be able to get the best education possible. This will help make sure that research progresses with the revolution. "
 HAW_peoples_victory:0 "People's Victory"
 HAW_peoples_victory_desc:0 "We have victory. The old capitalist elites are destroyed. The people are in charge and we can now look forward to a brighter future."
 HAW_constitution:0 "Hawaii's Constitution"
-HAW_constitution_desc:0 "Now that the government of Hawai'i is being finalized it would do good to have a constitution signed for the people. Regardless of what form of government that we have decided upon, we shall have a constitution.  "
+HAW_constitution_desc:0 "Now that the government of Hawai'i is being finalised it would do good to have a constitution signed for the people. Regardless of what form of government that we have decided upon, we shall have a constitution.  "
 
 ### Economy Foci ###
 HAW_building_our_economy:0 "Building Our Economy"
@@ -50,7 +50,7 @@ HAW_domestic_industry_desc:0 "To build up our economy we should promote more dom
 HAW_plantations:0 "Plantation Support"
 HAW_plantations_desc:0 "Plantations are a way of life in Hawai'i if we were to disrupt that now then it could send shock waves and destroy our chance at prosperity. Instead we should work closer with the plantations, this well help ensure that Hawaii's economy stays strong. "
 HAW_land_reform:0 "Land Reform"
-HAW_land_reform_desc:0 "While some are advocating for keeping the plantation structure, if we are to modernize we must destroy the plantation structure. It oppresses the native Hawai'ian people and immigrants alike. Let us reform it and break up the Plantations and support smaller farms instead. "
+HAW_land_reform_desc:0 "While some are advocating for keeping the plantation structure, if we are to modernise we must destroy the plantation structure. It oppresses the native Hawai'ian people and immigrants alike. Let us reform it and break up the Plantations and support smaller farms instead. "
 HAW_thriving_economy:0 "Thriving Economy"
 HAW_thriving_economy_desc:0 "We have done it, our economy is now booming. We have achieved a degree of prosperity for our islands and happiness has come to Hawai'i again."
 
