--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -533,13 +533,13 @@ fengtian.new.23.d:0 "Apparently feeling that their lesson in obedience is clear 
 fengtian.new.23.a:0 "At last!"
 #Clearing Investment Dearth#
 fengtian.new.24.t:0 "Encouraging Japanese Investment"
-fengtian.new.24.d:0 "The wars to the South left Fengtian destitute, bringing years of development and trust building in the economy to virtually nothing. If the Northeast is to prosper, and the Fengtian government is to reclaim the South, we will need substantial financial backing in the form of investment in key industries. Thanks to German support, the Qing economy has, so far, remained at least one step ahead of us, and the same level of support has previously been withheld by the Japanese due to concerns about our currency and the silver reserve backing it. \n\nHowever, with the reserve finally full and the Fengtian Yuan strong, sufficient incentives might be provided to encourage Japanese from the Home Islands to invest and help drive our economy. This will, of course, increase Japan's overall influence in the country, but some sacrifices must be made to support the inevitable National Reclamation War."
+fengtian.new.24.d:0 "The wars to the South left Fengtian destitute, bringing years of development and trust building in the economy to virtually nothing. If the Northeast is to prosper, and the Fengtian government is to reclaim the South, we will need substantial finanical backing in the form of investment in key industries. Thanks to German support, the Qing economy has, so far, remained at least one step ahead of us, and the same level of support has previously been withheld by the Japanese due to concerns about our currency and the silver reserve backing it. \n\n However, with the reserve finally full and the Fengtian Yuan strong, sufficient incentives might be provided to encourage Japanese from the Home Islands to invest and help drive our economy. This will, of course, increase Japan's overall influence in the country, but some sacrifices must be made to support the inevitable National Reclamation War."
 fengtian.new.24.a:0 "A necessary evil"
 fengtian.new.25.t:0 "Japanese Investment in Glass, Paper, and Textiles"
 fengtian.new.25.d:0 "Thanks to our financial incentives, representatives of the Mitsui Zaibatsu have indicated a willingness to invest heavily in local businesses, specifically Dongxing Dye & Textile Company, Fengtian Industrial Paper, and Manchurian Glass. With controlling shares in all three companies, Mitsui seems likely to dominate our glass, paper, and textile industries for the foreseeable future, with only Mantetsu's as competition."
 fengtian.new.25.a:0 "Good news"
 fengtian.new.26.t:0 "Japanese Investment in Shipping and Tourism"
-fengtian.new.26.d:0 "Ever since the establishment of its Yamato Hotel line, Mantetsu has actively promoted tourism in Fengtian, drawing wealthy and middle class tourists from the Home Islands to travel about Manchuria's 'exotic landscape' on its state of the art railways. In all that time, however, it has never extended its reach to the sea, and the majority of Fengtian's shipping has been carried out by its own merchant navy or established Japanese companies. n\n\ A small group of wealthy investors from Tokyo now intend to buy out several of these local companies and establish a water-borne alternative to Mantetsu's railway tourism, while performing vital shipping on the side, thus creating 'Bohai Shipping Enterprises' and 'Northeastern Cruise Lines'. "
+fengtian.new.26.d:0 "Ever since the establishment of its Yamato Hotel line, Mantetsu has actively promoted tourism in Fengtian, drawing wealthy and middle class tourists from the Home Islands to travel about Manchuria's 'exotic landscape' on its state of the art railways. In all that time, however, it has never extended its reach to the sea, and the majority of Fengtian's shipping has been carried out by its own merchant navy or established Japanese companies. \n\n A small group of wealthy investors from Tokyo now intend to buy out several of these local companies and establish a water-borne alternative to Mantetsu's railway tourism, while performing vital shipping on the side, thus creating 'Bohai Shipping Enterprises' and 'Northeastern Cruise Lines'. "
 fengtian.new.26.a:0 "Good news"
 fengtian.new.27.t:0 "Japanese Investment in Metals and Minerals"
 fengtian.new.27.d:0 "After talks with government representatives, the Sumitomo Zaibatsu has agreed to partially fund metals and mineral prospecting across Fengtian, in return for a proportional share in any companies created to extract any detected resources. With recent discoveries of gold in the Khigan Mountains, Tungsten in Fengtian Province, and various rare minerals in a variety of locations, their investment seems likely to pan out."
@@ -562,6 +562,34 @@ fengtian.new.32.a:0 "Good news!"
 fengtian.new.33.t:0 "An End to the Investment Shortage"
 fengtian.new.33.d:0 "After roughly a decade of virtually no external or internal investment beyond the government's own, Fengtian has made itself a reliable and trustworthy location for prosperous growth. Going from strength to strength, and with the fires of industry behind us, our prospects of retaking Beijing are growing by the day."
 fengtian.new.33.a:0 "Finally!"
+fengtian.new.34.t:0 "Colonel Ishiwara's Proposal"
+fengtian.new.34.d:0 "A Colonel serving as part of the Japanese Military Mission to the Fengtian Government has come forward with a proposal regarding arms transfers, as he feels that the relative parity in power between the Qing Empire and Fengtian Government has slipped strongly toward the former's favour. With the belief that he can leverage significant enough support in Imperial General Headquarters for three such shipments in exchange for an equal number containing non-strategic resources, while understanding the potential political complications of such an arrangement, he asks first for the opinion of our government before proceeding. Because the shipments would almost certainly depart from Hiroshima, a significant Imperial Japanese Army center of operations, the proposal has come to be called 'The Hiroshima Proposal'."
+fengtian.new.34.a:0 "Weapons are always welcome"
+fengtian.new.34.b:0 "The political risks are too great"
+fengtian.new.35.t:0 "The Hiroshima Proposal"
+fengtian.new.35.d:0 "Colonel Kanji Ishiwara, a member of the Military Mission to the Fengtian Government, recently brought a proposal before Imperial General Headquarters regarding a series of weapons shipments to Fengtian, in order to aid its defense against potential aggression by the Qing, Mongolia, or Russia. Three transfers of increasingly advanced equipment, specifically enough to equip four divisions, would be given in exchange for shipments of non-strategic resources of roughly equal value. The proposal has met with general approval from Imperial General Headquarters, but the Ministry of Foreign Affairs objects that the move could complicate internal Fengtian politics, causing conservative elements to feel threatened and more actively oppose our operations in the country. A smaller number of military officers also object on the grounds that Fengtian could eventually become an unreliable ally, though so far Zhang Zuolin has remained tightly under our thumb."
+fengtian.new.35.a:0 "Approve the Proposal"
+fengtian.new.35.b:0 "The Ministry of Foreign Affairs is right"
+fengtian.new.36.t:0 "Japanese Refusal"
+fengtian.new.36.d:0 "For unclear reasons, the Japanese government has decided to refuse shipments of arms to Fengtian, and as such the Ishiwara Proposal can be considered effectively abandoned."
+fengtian.new.36.a:0 "Unfortunate"
+fengtian.new.37.t:0 "The First Hiroshima Package Arrives"
+fengtian.new.37.d:0 "Containing hundreds of boxes of carefully packed rifles, along with 100 artillery pieces, the first 'Hiroshima Package' has arrived in Yingkow, with which we might equip roughly four divisions of men. Already, members of the Concordia Association are using this opportunity to demonstrate Japan's benevolence, and the purported benefits of Asian solidarity."
+fengtian.new.37.a:0 "Assets nonetheless"
+fengtian.new.38.t:0 "The Second Hiroshima Package"
+fengtian.new.38.d:0 "With the first of what have become known as the 'Hiroshima Packages' dispatched to Fengtian some time ago, our recent advancements in weapons technology would indicate that a second shipment ought to be on its way. Naturally, the government may once again decide to halt and withold the transfer, but failing to uphold our end of the agreement may reflect poorly on our standing."
+fengtian.new.38.a:0 "Dispatch the Package"
+fengtian.new.38.b:0 "Withhold the Package"
+fengtian.new.39.t:0 "The Second Hiroshima Package
+fengtian.new.29.d:0 "The Second Hiroshima Package has arrived in Yingkow, this time with improved rifles and artillery in similar quantities, but also some additional miscellaneous equipment on the side. All are worthy additions to our arsenal, and another opportunity for the Concordia Association to make its voice heard."
+fengtian.new.29.a:0 "Good"
+fengtian.new.40.t:0 "The Third Hiroshima Package"
+fengtian.new.40.d:0 "The time has come to dispatch the third and final Hiroshima Package to Fengtian, containing some more advanced weapons, in addition to a small collection of tanks. Breaking the agreement at this stage would, once again, be a shameful act."
+fengtian.new.40.a:0 "Dispatch the Package"
+fengtian.new.40.b:0 "Withhold the Package"
+fengtian.new.41.t:0 "The Third Hiroshima Package"
+fengtian.new.41.d:0 "The third and final Hiroshima Package has arrived, containing more advanced weapons, and even forty medium tanks."
+fengtian.new.41.a:0 "Good"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
